--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <h3>Users:</h3>
+        <div id="users">
+            <div class="custom-control custom-radio">
+                <input type="radio" class="custom-control-input" id="jasmineRadio" disabled>
+                <label class="custom-control-label" for="customRadioDisabled">Jasmine Walters</label>
+              </div>
+              
+              <div class="custom-control custom-radio">
+                <input type="radio" id="marshallRadio" name="radioDisabled" class="custom-control-input" disabled>
+                <label class="custom-control-label" for="customRadioDisabled">Marshall Offutt</label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input type="radio" id="maryRadio" name="radioDisabled" class="custom-control-input" disabled>
+                <label class="custom-control-label" for="customRadioDisabled">Mary Rys</label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input type="radio" id="ryanRadio" name="radioDisabled" class="custom-control-input" disabled>
+                <label class="custom-control-label" for="customRadioDisabled">Ryan Nelson</label>
+              </div>
+        </div>
     <h1>Messages:</h1>
-    <div id="theSquare"></div>
+        <div id="theSquare"></div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
