--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 </head>
 <body>
     
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbar">
+            <img src="./whaddup.jpg" alt="whaddup boi" class="img-thumbnail">
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2 w-100" type="text" placeholder="Enter Message">
+            <button class="btn btn-outline-success my-2 my-sm-0">Clear Message Board</button>
+          </form>
+        </div>
+
+        <div class="custom-control custom-checkbox m-4">
+                <input type="checkbox" class="custom-control-input" id="darkCheck">
+                <label class="custom-control-label" for="customCheck1">Dark Mode</label>
+        </div>
+        <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="giantCheck">
+                <label class="custom-control-label" for="customCheck1">GIANT text</label>
+        </div>
+      </nav>
     
 
 
