--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script src="./javascript/helpers/events.js" type="module"></script>
         <script src="./javascript/helpers/util.js" type="module"></script>
         <script src="./javascript/main.js" type="module"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
 </body>
 </html>
