finished posistioning navbar elements

--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbar">
-            <img src="./whaddup.jpg" alt="whaddup boi" class="img-thumbnail">
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2 w-100" type="text" placeholder="Enter Message">
+    <nav class="navbar-expand-lg navbar-light border-bottom" id="navbar">
+        <div class="collapse navbar-collapse">
+            <img src="./images/whaddupBoi.jpg" alt="whaddup boi" class="img-thumbnail mt-1">
+            <input class="form-control mr-sm-2 ml-2" type="text" placeholder="Enter Message">
             <button class="btn btn-outline-success my-2 my-sm-0">Clear Message Board</button>
-          </form>
         </div>
 
-        <div class="custom-control custom-checkbox m-4">
-                <input type="checkbox" class="custom-control-input" id="darkCheck">
+        <div class="d-flex" id="checkboxes">
+          <div class="custom-control custom-checkbox mr-4">
+                <input type="checkbox" class="custom-control-input" id="customCheck1"> <!--IDs need to remain this way in order for checkboxes to work-->
                 <label class="custom-control-label" for="customCheck1">Dark Mode</label>
+          </div>
+          <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck2"> <!--IDs need to remain this way in order for checkboxes to work-->
+                <label class="custom-control-label" for="customCheck2">GIANT text</label>
+          </div>
         </div>
-        <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="giantCheck">
-                <label class="custom-control-label" for="customCheck1">GIANT text</label>
-        </div>
-      </nav>
-    
+    </nav>
 
     <h1>Messages:</h1>
     <div id="theSquare"></div>
