--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 <body>
     
+    <nav class="navbar-expand-lg navbar-light border-bottom" id="navbar">
+        <div class="collapse navbar-collapse">
+            <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
+            <input class="mr-sm-2 w-75 ml-2" type="text" placeholder="Enter Message">
+            <button class="mr-2">
+              <span>Clear Message Board</span>
+            </button>
+        </div>
+
+        <div class="d-flex" id="checkboxes">
+          <div class="custom-control custom-checkbox mr-4">
+                <input type="checkbox" class="custom-control-input" id="customCheck1"> <!--IDs need to remain this way in order for checkboxes to work-->
+                <label class="custom-control-label" for="customCheck1">Dark Mode</label>
+          </div>
+          <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="customCheck2"> <!--IDs need to remain this way in order for checkboxes to work-->
+                <label class="custom-control-label" for="customCheck2">GIANT text</label>
+          </div>
+        </div>
+    </nav>
+
     <h1>Messages:</h1>
     <div id="theSquare"></div>
 
