--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <nav class="navbar-expand-lg navbar-light border-bottom" id="navbar">
         <div class="collapse navbar-collapse">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
-            <input class="mr-sm-2 w-75 ml-2" type="text" placeholder="Enter Message">
+            <input class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
             <button class="mr-2">
-              <span>Clear Message Board</span>
+              <span>&nbsp;Clear Message Board&nbsp;</span>
             </button>
         </div>
 
         <div class="d-flex" id="checkboxes">
-          <div class="custom-control custom-checkbox mr-4">
-                <input type="checkbox" class="custom-control-input" id="customCheck1"> <!--IDs need to remain this way in order for checkboxes to work-->
-                <label class="custom-control-label" for="customCheck1">Dark Mode</label>
+          <div class="form-check mr-4">
+                <input class="form-check-input" type="checkbox" id="customCheck1"> <!--IDs need to remain this way in order for checkboxes to work-->
+                <label class="form-check-label" for="customCheck1">Dark Mode</label>
           </div>
-          <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customCheck2"> <!--IDs need to remain this way in order for checkboxes to work-->
-                <label class="custom-control-label" for="customCheck2">GIANT text</label>
+          <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="customCheck2"> <!--IDs need to remain this way in order for checkboxes to work-->
+                <label class="form-check-label" for="customCheck2">GIANT text</label>
           </div>
         </div>
     </nav>
