fixed radio names

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     <h3>Users:</h3>
         <div id="users">
             <div class="custom-control custom-radio">
-                <input type="radio" class="custom-control-input" id="jasmineRadio" disabled>
-                <label class="custom-control-label" for="customRadioDisabled">Jasmine Walters</label>
+                <input type="radio" id="customRadio1" name="radioDisabled" class="custom-control-input">
+                <label class="custom-control-label" for="customRadio1">Jasmine Walters</label>
               </div>
               <div class="custom-control custom-radio">
-                <input type="radio" id="marshallRadio" name="radioDisabled" class="custom-control-input" disabled>
-                <label class="custom-control-label" for="customRadioDisabled">Marshall Offutt</label>
+                <input type="radio" id="customRadio2" name="radioDisabled" class="custom-control-input">
+                <label class="custom-control-label" for="customRadio2">Marshall Offutt</label>
               </div>
               <div class="custom-control custom-radio">
-                <input type="radio" id="maryRadio" name="radioDisabled" class="custom-control-input" disabled>
-                <label class="custom-control-label" for="customRadioDisabled">Mary Rys</label>
+                <input type="radio" id="customRadio3" name="radioDisabled" class="custom-control-input">
+                <label class="custom-control-label" for="customRadio3">Mary Rys</label>
               </div>
               <div class="custom-control custom-radio">
-                <input type="radio" id="ryanRadio" name="radioDisabled" class="custom-control-input" disabled>
-                <label class="custom-control-label" for="customRadioDisabled">Ryan Nelson</label>
+                <input type="radio" id="customRadio4" name="radioDisabled" class="custom-control-input">
+                <label class="custom-control-label" for="customRadio4">Ryan Nelson</label>
               </div>
         </div>
 
