Starts styling process

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </div>
     </nav>
 
-    <h1>Messages:</h1>
-    <div id="theSquare"></div>
+    <div class="main-content">
+        <h2 class="text-align-center">Messages:</h2>
+        <div id="theSquare" class="container border border-secondary"></div>
+    </div>
 
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
