--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar-expand-lg navbar-light border-bottom" id="navbar">
         <div class="collapse navbar-collapse">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
-            <input class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
+            <input id="input" class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
             <button class="mr-2">
               <span>&nbsp;Clear Message Board&nbsp;</span>
             </button>
