--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <h3>Users:</h3>
         <div id="users">
             <div class="custom-control custom-radio">
-                <input type="radio" id="customRadio1" name="radioDisabled" class="custom-control-input">
+                <input type="radio" id="customRadio1" name="radioDisabled" class="radio custom-control-input">
                 <label class="custom-control-label" for="customRadio1">Jasmine Walters</label>
               </div>
               <div class="custom-control custom-radio">
-                <input type="radio" id="customRadio2" name="radioDisabled" class="custom-control-input">
+                <input type="radio" id="customRadio2" name="radioDisabled" class="radio custom-control-input">
                 <label class="custom-control-label" for="customRadio2">Marshall Offutt</label>
               </div>
               <div class="custom-control custom-radio">
-                <input type="radio" id="customRadio3" name="radioDisabled" class="custom-control-input">
+                <input type="radio" id="customRadio3" name="radioDisabled" class="radio custom-control-input">
                 <label class="custom-control-label" for="customRadio3">Mary Rys</label>
               </div>
               <div class="custom-control custom-radio">
-                <input type="radio" id="customRadio4" name="radioDisabled" class="custom-control-input">
+                <input type="radio" id="customRadio4" name="radioDisabled" class="radio custom-control-input">
                 <label class="custom-control-label" for="customRadio4">Ryan Nelson</label>
               </div>
         </div>
