--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
           </div>
         </div>
     </nav>
-    
+
     <div class="container main-content d-flex row pt-2">
         <div class="users p-3 col-2">
             <h3>Users:</h3>
             <div id="users">
                 <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio1" name="radioDisabled" class="radio custom-control-input">
+                    <input type="radio" id="customRadio1" name="radioDisabled" class="radio custom-control-input" value="Jasmine Walters">
                     <label class="custom-control-label" for="customRadio1">Jasmine Walters</label>
                 </div>
                 <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio2" name="radioDisabled" class="radio custom-control-input">
+                    <input type="radio" id="customRadio2" name="radioDisabled" class="radio custom-control-input" value="Marshall Offutt">
                     <label class="custom-control-label" for="customRadio2">Marshall Offutt</label>
                 </div>
                 <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio3" name="radioDisabled" class="radio custom-control-input">
+                    <input type="radio" id="customRadio3" name="radioDisabled" class="radio custom-control-input" value="Mary Rys">
                     <label class="custom-control-label" for="customRadio3">Mary Rys</label>
                 </div>
                 <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio4" name="radioDisabled" class="radio custom-control-input">
+                    <input type="radio" id="customRadio4" name="radioDisabled" class="radio custom-control-input" value="Ryan Nelson">
                     <label class="custom-control-label" for="customRadio4">Ryan Nelson</label>
                 </div>
             </div>
