good stoping point

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
             <input class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
-            <button class="mr-2">
+            <button class="mr-2" id="clearAll-button">
               <span>&nbsp;Clear Message Board&nbsp;</span>
             </button>
         </div>
