--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav class="navbar-expand-lg navbar-light border-bottom" id="navbar">
+    <nav class="navbar-expand-lg navbar-light" id="navbar">
         <div class="collapse navbar-collapse">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
             <input id="textInput" class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
