dat boi is now a clickable image

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav class="navbar-expand-lg navbar-light border-bottom" id="navbar">
+    <nav class="navbar-expand-lg navbar-light" id="navbar">
         <div class="collapse navbar-collapse">
+            <a href="https://www.youtube.com/watch?v=CU5ByOf9eP0">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
+            </a>
             <input class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
             <button class="mr-2">
               <span>&nbsp;Clear Message Board&nbsp;</span>
