Makes it look like windows 95

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
     </nav>
 
-    <div class="container main-content d-flex row pt-2">
-        <div class="users p-3 col-2">
+    <div class="d-flex row p-4">
+        <div class="users content-container p-3 col-2">
             <h3>Users:</h3>
             <div id="users">
                 <div class="custom-control custom-radio">
@@ -52,9 +52,9 @@
                 </div>
             </div>
         </div>
-        <div class="the-square p-3 col-10">
+        <div class="the-square content-container p-3 ml-4 col-9">
             <h2 class="text-align-center">Messages:</h2>
-            <div id="theSquare" class="container border border-secondary"></div>
+            <div id="theSquare" class="square-container"></div>
         </div>
     </div>
 
