Finishes win95 styling. Whew

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     </nav>
 
     <div class="d-flex row p-4">
-        <div class="users content-container p-3 col-2">
-            <h3>Users:</h3>
-            <div id="users">
+            <div class="p-3 col-2">
+                    <div class="section-header">
+                        <h2 class="text-align-center">Users:</h2>
+                    </div>
+            <div id="users" class="content-container">
                 <div class="custom-control custom-radio">
                     <input type="radio" id="customRadio1" name="radioDisabled" class="radio custom-control-input" value="Jasmine Walters">
                     <label class="custom-control-label" for="customRadio1">Jasmine Walters</label>
@@ -52,8 +54,10 @@
                 </div>
             </div>
         </div>
-        <div class="the-square content-container p-3 ml-4 col-9">
-            <h2 class="text-align-center">Messages:</h2>
+        <div class="the-square p-3 ml-4 col-9">
+            <div class="section-header">
+                <h2 class="text-align-center">Messages:</h2>
+            </div>
             <div id="theSquare" class="square-container"></div>
         </div>
     </div>
