--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <input class="form-check-input" type="checkbox" id="customCheck2"> <!--IDs need to remain this way in order for checkboxes to work-->
                 <label class="form-check-label" for="customCheck2">GIANT text</label>
           </div>
+          <button type="button" id="modal" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Change Theme
+          </button>
         </div>
     </nav>
 
@@ -57,6 +60,29 @@
             <div id="theSquare" class="container border border-secondary"></div>
         </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Color Picker</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Choose background color:
+              <input type="color">
+              Choose text color:
+              <input type="color">
+            </div>
+            <div class="modal-footer">
+              <button type="button" id="changeTextBtn" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" id="changeBackBtn" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
