finished time Stamp

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
             <input id="textInput" class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
-            <button class="mr-2">
+            <button class="mr-2" id="clearAll-button">
               <span>&nbsp;Clear Message Board&nbsp;</span>
             </button>
         </div>
@@ -70,6 +70,7 @@
         <script src="./javascript/helpers/events.js" type="module"></script>
         <script src="./javascript/helpers/util.js" type="module"></script>
         <script src="./javascript/main.js" type="module"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
 </body>
 </html>
