--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chatty</title>
+    <title>Whaddup</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" type="image/png" href="images/frogIcon.png/">
 </head>
 <body>
-    <nav class="navbar-expand-lg navbar-light" id="navbar">
+    <nav class="sticky-top navbar-expand-lg navbar-light" id="navbar">    
         <div class="collapse navbar-collapse">
             <a href="https://www.youtube.com/watch?v=CU5ByOf9eP0">
             <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
@@ -18,19 +19,25 @@
             <button class="mr-2" id="clearAll-button">
               <span>&nbsp;Clear Message Board&nbsp;</span>
             </button>
-        </div>
-
+        </div> 
         <div class="d-flex" id="checkboxes">
           <div class="form-check mr-4">
-                <input class="form-check-input" type="checkbox" id="customCheck1"> <!--IDs need to remain this way in order for checkboxes to work-->
+                <input class="form-check-input" type="checkbox" id="customCheck1"> 
                 <label class="form-check-label" for="customCheck1">Dark Mode</label>
           </div>
           <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="customCheck2"> <!--IDs need to remain this way in order for checkboxes to work-->
-                <label class="form-check-label" for="customCheck2">GIANT text</label>
+                <input class="form-check-input" type="checkbox" id="customCheck2">
+                <label class="form-check-label" for="customCheck2">GIANT Text</label>
           </div>
         </div>
     </nav>
+
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Hold up!</strong> You need to select a user before adding a message.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 
     <div class="d-flex row p-4">
             <div class="p-3 col-2">
@@ -38,21 +45,21 @@
                         <h2 class="text-align-center">Users:</h2>
                     </div>
             <div id="users" class="content-container">
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio1" name="radioDisabled" class="radio custom-control-input" value="Jasmine Walters">
-                    <label class="custom-control-label" for="customRadio1">Jasmine Walters</label>
+                <div class="form-radio">
+                    <input type="radio" id="customRadio1" name="radioDisabled" class="radio form-radio-input" value="Jasmine Walters">
+                    <label class="form-radio-label" for="customRadio1">Jasmine Walters</label>
                 </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio2" name="radioDisabled" class="radio custom-control-input" value="Marshall Offutt">
-                    <label class="custom-control-label" for="customRadio2">Marshall Offutt</label>
+                <div class="form-radio">
+                    <input type="radio" id="customRadio2" name="radioDisabled" class="radio form-radio-input" value="Marshall Offutt">
+                    <label class="form-radio-label" for="customRadio2">Marshall Offutt</label>
                 </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio3" name="radioDisabled" class="radio custom-control-input" value="Mary Rys">
-                    <label class="custom-control-label" for="customRadio3">Mary Rys</label>
+                <div class="form-radio">
+                    <input type="radio" id="customRadio3" name="radioDisabled" class="radio form-radio-input" value="Mary Rys">
+                    <label class="form-radio-label" for="customRadio3">Mary Rys</label>
                 </div>
-                <div class="custom-control custom-radio">
-                    <input type="radio" id="customRadio4" name="radioDisabled" class="radio custom-control-input" value="Ryan Nelson">
-                    <label class="custom-control-label" for="customRadio4">Ryan Nelson</label>
+                <div class="form-radio">
+                    <input type="radio" id="customRadio4" name="radioDisabled" class="radio form-radio-input" value="Ryan Nelson">
+                    <label class="form-radio-label" for="customRadio4">Ryan Nelson</label>
                 </div>
             </div>
         </div>
