--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
     <link rel="shortcut icon" type="image/png" href="images/frogIcon.png/">
 </head>
 <body>
+<div id="alert" class="alert fade show" role="alert">
+    <div class="alertHead">
+    <strong>Hold up!</strong>
+    </div>
+    <div class="alertMessage">
+        <div class="d-flex flex-wrap">
+        <img class="img mt-4" src="./images/alert.png">
+        <p class="sentence ml-2">You need to select a user before adding a message.</p>
+        </div> 
+        <button id="ok" class="ok mt-4 mb-2"><span>&nbsp;&nbsp;&nbsp;OK&nbsp;&nbsp;&nbsp;</span></button>  
+    </div>
+    
+</div>
+
     <nav class="sticky-top navbar-expand-lg navbar-light" id="navbar">    
         <div class="collapse navbar-collapse">
             <a href="https://www.youtube.com/watch?v=CU5ByOf9eP0">
-            <img class="m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
+            <img class="datBoi m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
             </a>
             <input id="textInput" class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
             <button class="mr-2" id="clearAll-button">
@@ -31,13 +45,6 @@
           </div>
         </div>
     </nav>
-
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Hold up!</strong> You need to select a user before adding a message.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
 
     <div class="d-flex row p-4">
             <div class="p-3 col-2">
