--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://www.youtube.com/watch?v=CU5ByOf9eP0">
             <img class="datBoi m-2" src="./images/whaddupBoi.png" alt="whaddup boi">
             </a>
-            <input id="textInput" class="mr-sm-2 w-75 ml-1" type="text" placeholder=" Enter Message">
+            <input id="textInput" class="mr-sm-2 ml-1" type="text" placeholder=" Enter Message">
             <button class="mr-2" id="clearAll-button">
               <span>&nbsp;Clear Message Board&nbsp;</span>
             </button>
