--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body id="body">
     <nav class="navbar-expand-lg navbar-light" id="navbar">
         <div class="collapse navbar-collapse">
             <a href="https://www.youtube.com/watch?v=CU5ByOf9eP0">
@@ -32,9 +32,9 @@
         </div>
     </nav>
 
-    <div class="d-flex row p-4">
+    <div id="main" class="d-flex row p-4">
             <div class="p-3 col-2">
-                    <div class="section-header">
+                    <div id="head" class="section-header">
                         <h2 class="text-align-center">Users:</h2>
                     </div>
             <div id="users" class="content-container">
@@ -56,8 +56,8 @@
                 </div>
             </div>
         </div>
-        <div class="the-square p-3 ml-4 col-9">
-            <div class="section-header">
+        <div id="square" class="the-square p-3 ml-4 col-9">
+            <div id="sqhead" class="section-header">
                 <h2 class="text-align-center">Messages:</h2>
             </div>
             <div id="theSquare" class="square-container"></div>
