--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <label class="form-check-label" for="customCheck2">GIANT Text</label>
           </div>
           <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+            <button type="button" class="ml-3"data-toggle="modal" data-target="#exampleModalCenter">
             Color Picker
             </button>
         </div>
@@ -55,7 +55,7 @@
         <div class="modal-content">
             <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLongTitle">Chose your own colors</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
@@ -70,7 +70,7 @@
             </div>
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" data-dismiss="modal">Close</button>
             </div>
         </div>
         </div>
