--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="images/frogIcon.png/">
 </head>
 <body id="body">
+    <!-- alert message -->
     <div id="alert" class="alert fade show" role="alert">
         <div class="alertHead">
         <strong>Hold up!</strong>
@@ -24,6 +25,7 @@
         </div>   
     </div>
 
+    <!-- navbar -->
     <nav class="sticky-top navbar-expand-lg navbar-light" id="navbar">    
         <div class="collapse navbar-collapse">
             <a href="https://www.youtube.com/watch?v=CU5ByOf9eP0">
@@ -61,6 +63,7 @@
             </div>
             <div class="modal-body">
             <div>
+                <!-- color picker -->
                 <input type="color" id="bodyColor" name="color"
                         value="#f6b73c" />
                 <label for="body">Background</label>
@@ -76,8 +79,10 @@
         </div>
     </div>
 
+    <!-- page container -->
     <div id="main" class="d-flex row p-4">
             <div class="p-3 col-2">
+                <!-- user radio buttons -->
                     <div id="head" class="section-header">
                         <h2 class="text-align-center">Users:</h2>
                     </div>
@@ -100,6 +105,7 @@
                         </div>
                     </div>
                 </div>
+        <!-- message content -->
         <div id="square" class="the-square p-3 ml-4 col-9">
             <div id="sqhead" class="section-header">
                 <h2 class="text-align-center">Messages:</h2>
@@ -107,7 +113,6 @@
             <div id="theSquare" class="square-container"></div>
         </div>
     </div>
-
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
